--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -47,10 +47,10 @@ RUN addgroup --system --gid 1001 nodejs && \
     adduser --system --uid 1001 nextjs
 
 # Copy necessary files from standalone build
-# Standalone output is in .next/standalone and contains server.js at root
+# Standalone preserves the original directory structure: frontend/web/
 COPY --from=builder --chown=nextjs:nodejs /app/web/.next/standalone ./
-COPY --from=builder --chown=nextjs:nodejs /app/web/.next/static ./web/.next/static
-COPY --from=builder --chown=nextjs:nodejs /app/web/public ./web/public
+COPY --from=builder --chown=nextjs:nodejs /app/web/.next/static ./frontend/web/.next/static
+COPY --from=builder --chown=nextjs:nodejs /app/web/public ./frontend/web/public
 
 USER nextjs
 
@@ -60,5 +60,5 @@ EXPOSE 3000
 ENV PORT=3000
 ENV HOSTNAME="0.0.0.0"
 
-# Start the application - server.js is at root of standalone output
-CMD ["node", "server.js"]
+# Start the application - server.js is at frontend/web/server.js
+CMD ["node", "frontend/web/server.js"]
