--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -27,6 +27,10 @@ COPY sdk ./sdk
 
 # Build Next.js app
 WORKDIR /app/web
+
+# Accept build argument for API URL
+ARG NEXT_PUBLIC_API_URL
+ENV NEXT_PUBLIC_API_URL=$NEXT_PUBLIC_API_URL
 ENV NEXT_TELEMETRY_DISABLED=1
 ENV NODE_ENV=production
 
