--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -20,6 +20,9 @@ steps:
       '--cache-from', 'gcr.io/$PROJECT_ID/lad-frontend:latest',
       '--build-arg', 'BUILDKIT_INLINE_CACHE=1',
       '--build-arg', 'NEXT_PUBLIC_API_URL=$_API_URL',
+      '--build-arg', 'NEXT_PUBLIC_BACKEND_URL=$_API_URL',
+      '--build-arg', 'NEXT_PUBLIC_API_BASE=$_API_URL',
+      '--build-arg', 'NEXT_PUBLIC_SOCKET_URL=$_API_URL',
       '-f', 'web/Dockerfile',
       '.'
     ]
