--- a/web/cloudbuild.yaml
+++ b/web/cloudbuild.yaml
@@ -78,4 +78,4 @@ substitutions:
   _REGION: 'us-central1'
   _SERVICE_NAME: 'lad-frontend'
   _ENV: 'production'
-  _API_URL: 'https://lad-backend-3nddlneyya-uc.a.run.app'
+  _API_URL: 'https://lad-backend-develop-741719885039.us-central1.run.app'
