--- a/web/package.json
+++ b/web/package.json
@@ -60,7 +60,8 @@
     "svix": "^1.81.0",
     "sweetalert2": "^11.26.2",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "exceljs": "^4.4.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
