--- a/web/package.json
+++ b/web/package.json
@@ -9,12 +9,12 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@LAD/frontend-features": "file:../sdk",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@LAD/frontend-features": "file:../sdk",
     "@mui/icons-material": "^7.3.4",
     "@mui/material": "^7.3.5",
     "@prisma/client": "^6.19.0",
@@ -41,6 +41,7 @@
     "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "exceljs": "^4.4.0",
     "file-saver": "^2.0.5",
     "framer-motion": "^12.23.24",
     "jose": "^6.1.2",
