--- a/web/package.json
+++ b/web/package.json
@@ -34,6 +34,7 @@
     "@reduxjs/toolkit": "^2.10.0",
     "@stripe/react-stripe-js": "^5.4.0",
     "@stripe/stripe-js": "^8.5.2",
+    "@tanstack/react-query": "^5.62.0",
     "@xyflow/react": "^12.10.0",
     "ag-grid-community": "^34.3.1",
     "ag-grid-react": "^34.3.1",
