--- a/sdk/package.json
+++ b/sdk/package.json
@@ -43,6 +43,10 @@
     "react": "^18.0.0",
     "vitest": "^4.0.16"
   },
+  "peerDependencies": {
+    "@tanstack/react-query": "^5.90.16",
+    "react": "^18.0.0"
+  },
   "keywords": [
     "frontend",
     "features",
@@ -53,5 +57,10 @@
     "voice-agent"
   ],
   "author": "LAD Team",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "axios": "^1.13.2",
+    "chart.js": "^4.5.1",
+    "react-chartjs-2": "^5.3.1"
+  }
 }
