--- a/web/cloudbuild.yaml
+++ b/web/cloudbuild.yaml
@@ -8,6 +8,18 @@ steps:
         echo "${BRANCH_NAME,,}" > /workspace/branch_lower.txt
         cat /workspace/branch_lower.txt
 
+  # Debug step: Show the values that will be used for build arguments
+  - name: 'gcr.io/cloud-builders/gcloud'
+    entrypoint: 'bash'
+    args:
+      - '-c'
+      - |
+        echo "=== Build Arguments Debug ==="
+        echo "BRANCH_NAME: ${BRANCH_NAME}"
+        echo "_API_URL: ${_API_URL}"
+        echo "_NEXT_PUBLIC_SOCKET_URL: ${_NEXT_PUBLIC_SOCKET_URL}"
+        echo "=== End Debug ==="
+
   # Build the Docker image with buildkit for better caching
   - name: 'gcr.io/cloud-builders/docker'
     args: [
@@ -18,10 +30,10 @@ steps:
       '-t', 'gcr.io/$PROJECT_ID/lad-frontend:latest',
       '--cache-from', 'gcr.io/$PROJECT_ID/lad-frontend:latest',
       '--build-arg', 'BUILDKIT_INLINE_CACHE=1',
-      '--build-arg', 'NEXT_PUBLIC_API_URL=$_API_URL',
-      '--build-arg', 'NEXT_PUBLIC_BACKEND_URL=$_API_URL',
-      '--build-arg', 'NEXT_PUBLIC_ICP_BACKEND_URL=$_API_URL',
-      '--build-arg', 'NEXT_PUBLIC_SOCKET_URL=$_NEXT_PUBLIC_SOCKET_URL',
+      '--build-arg', 'NEXT_PUBLIC_API_URL=https://lad-backend-develop-741719885039.us-central1.run.app',
+      '--build-arg', 'NEXT_PUBLIC_BACKEND_URL=https://lad-backend-develop-741719885039.us-central1.run.app',
+      '--build-arg', 'NEXT_PUBLIC_ICP_BACKEND_URL=https://lad-backend-develop-741719885039.us-central1.run.app',
+      '--build-arg', 'NEXT_PUBLIC_SOCKET_URL=https://lad-backend-develop-741719885039.us-central1.run.app',
       '-f', 'web/Dockerfile',
       '.'
     ]
