feat: Add VAPI disable environment variable to cloud build configurations
- Add NEXT_PUBLIC_DISABLE_VAPI=true build argument to both cloudbuild.yaml files
- Add runtime environment variable in Cloud Run deployment
- Add ARG declaration in Dockerfile for the build argument
- Ensures VAPI feature is disabled by default in all deployments

This prevents VAPI routing errors in production by setting the disable flag at build and runtime.

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -23,6 +23,7 @@ steps:
       '--build-arg', 'NEXT_PUBLIC_BACKEND_URL=$_API_URL',
       '--build-arg', 'NEXT_PUBLIC_API_BASE=$_API_URL',
       '--build-arg', 'NEXT_PUBLIC_SOCKET_URL=$_API_URL',
+      '--build-arg', 'NEXT_PUBLIC_DISABLE_VAPI=true',
       '-f', 'web/Dockerfile',
       '.'
     ]
