--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -34,10 +34,12 @@ ARG NEXT_PUBLIC_BACKEND_URL
 ARG NEXT_PUBLIC_ICP_BACKEND_URL
 ARG NEXT_PUBLIC_API_BASE
 ARG NEXT_PUBLIC_SOCKET_URL
+ARG NEXT_PUBLIC_DISABLE_VAPI
 
 ENV NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL:-https://lad-backend-develop-741719885039.us-central1.run.app}
 ENV NEXT_PUBLIC_BACKEND_URL=${NEXT_PUBLIC_BACKEND_URL:-https://lad-backend-develop-741719885039.us-central1.run.app}
 ENV NEXT_PUBLIC_ICP_BACKEND_URL=${NEXT_PUBLIC_ICP_BACKEND_URL:-https://lad-backend-develop-741719885039.us-central1.run.app}
+ENV NEXT_PUBLIC_DISABLE_VAPI=${NEXT_PUBLIC_DISABLE_VAPI:-true}
 ENV NEXT_PUBLIC_API_BASE=$NEXT_PUBLIC_API_BASE
 ENV NEXT_PUBLIC_SOCKET_URL=$NEXT_PUBLIC_SOCKET_URL
 ENV NEXT_TELEMETRY_DISABLED=1
