--- a/web/package.json
+++ b/web/package.json
@@ -44,6 +44,7 @@
     "chartjs": "^0.3.24",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "exceljs": "^4.4.0",
     "file-saver": "^2.0.5",
     "framer-motion": "^12.23.24",
