--- a/web/package.json
+++ b/web/package.json
@@ -18,6 +18,7 @@
     "@mui/icons-material": "^7.3.4",
     "@mui/material": "^7.3.5",
     "@prisma/client": "^6.19.0",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
