--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -18,7 +18,7 @@ steps:
       - '--build-arg'
       - 'NEXT_PUBLIC_DISABLE_VAPI=false'
       - '-f'
-      - 'frontend/Dockerfile'
+      - 'Dockerfile'
       - '.'
 
   # Push image to Container Registry
