Conversation page added

--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,8 @@
     "@dnd-kit/utilities": "^3.2.2",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@fortawesome/free-brands-svg-icons": "^7.1.0",
+    "@fortawesome/react-fontawesome": "^3.1.1",
     "@LAD/frontend-features": "file:../sdk",
     "@mui/icons-material": "^7.3.4",
     "@mui/material": "^7.3.5",
@@ -61,6 +63,7 @@
     "react-dropzone": "^14.3.8",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.4",
+    "react-virtuoso": "^4.18.1",
     "reactflow": "^11.11.4",
     "recharts": "^2.15.4",
     "socket.io-client": "^4.8.1",
