fix: SSE 404 and API 401 errors in cloud deployment
- Fix SSE URL construction to properly include /api prefix
- Update apiClient to check for both 'auth_token' and 'token' in localStorage
- Update all cloudbuild.yaml files to use NEXT_PUBLIC_BACKEND_URL instead of NEXT_PUBLIC_API_URL
- Resolve merge conflicts in web/cloudbuild.yaml
- Update .env.production.template with clearer configuration guidance

Fixes:
- 404 errors on /campaigns/{id}/events and /campaigns/{id}/analytics endpoints
- 401 errors on API requests due to missing auth token
- Campaign analytics 'Offline' indicator now shows 'Live' correctly

--- a/web/.env.production.template
+++ b/web/.env.production.template
@@ -4,10 +4,17 @@
 # ===================================
 # Backend API URLs
 # ===================================
-# Use your production backend URL (Cloud Run, App Engine, etc.)
-NEXT_PUBLIC_API_URL=https://your-backend-service.run.app/api
+# IMPORTANT: Choose ONE of the following configurations:
+#
+# Option 1 (Recommended): Use NEXT_PUBLIC_BACKEND_URL (without /api)
+# The application will automatically append /api when needed
 NEXT_PUBLIC_BACKEND_URL=https://your-backend-service.run.app
 NEXT_PUBLIC_ICP_BACKEND_URL=https://your-backend-service.run.app
+#
+# Option 2 (Alternative): Use NEXT_PUBLIC_API_URL (with /api)
+# NEXT_PUBLIC_API_URL=https://your-backend-service.run.app/api
+#
+# Note: If both are set, NEXT_PUBLIC_BACKEND_URL takes precedence
 
 # Server-side API URL (for Next.js API routes)
 BACKEND_INTERNAL_URL=https://your-backend-service.run.app
