fix: add VITE_BACKEND_URL to build configuration
- Add VITE_BACKEND_URL build arg to cloudbuild.yaml
- Add VITE_BACKEND_URL ARG and ENV to Dockerfile
- Ensure all environment variables are baked into build correctly

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -8,6 +8,8 @@ steps:
       - '-t'
       - 'gcr.io/$PROJECT_ID/lad-frontend:latest'
       - '--build-arg'
+      - 'VITE_BACKEND_URL=https://lad-backend-develop-741719885039.us-central1.run.app'
+      - '--build-arg'
       - 'NEXT_PUBLIC_BACKEND_URL=https://lad-backend-develop-741719885039.us-central1.run.app'
       - '--build-arg'
       - 'NEXT_PUBLIC_ICP_BACKEND_URL=https://lad-backend-develop-741719885039.us-central1.run.app'
