--- a/web/.gitignore
+++ b/web/.gitignore
@@ -46,3 +46,13 @@ next-env.d.ts
 
 # OS
 Thumbs.db
+# Documentation files (local development only)
+payload.json
+web/CALLLOGS_SKELETON_IMPLEMENTATION.md
+web/CALLLOGS_VERIFIED.md
+web/IMPLEMENTATION_SUMMARY.md
+web/IMPLEMENTATION_COMPLETE.md
+web/OPTIMISTIC_NAVIGATION.md
+web/QUICKSTART_SKELETON_LOADING.md
+web/TROUBLESHOOTING.md
+web/VISUAL_GUIDE.md
