--- a/web/package.json
+++ b/web/package.json
@@ -40,6 +40,7 @@
     "@stripe/react-stripe-js": "^5.4.0",
     "@stripe/stripe-js": "^8.5.2",
     "@tanstack/react-query": "^5.90.16",
+    "@types/qrcode": "^1.5.6",
     "@xyflow/react": "^12.10.0",
     "ag-grid-community": "^34.3.1",
     "ag-grid-react": "^34.3.1",
@@ -57,6 +58,7 @@
     "lucide-react": "^0.545.0",
     "next": "^15.5.9",
     "prisma": "^6.19.0",
+    "qrcode": "^1.5.4",
     "react": "19.1.0",
     "react-audio-visualize": "^1.2.0",
     "react-chartjs-2": "^5.3.1",
