gitignore files added

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,7 @@ web/OPTIMISTIC_NAVIGATION.md
 web/QUICKSTART_SKELETON_LOADING.md
 web/TROUBLESHOOTING.md
 web/VISUAL_GUIDE.md
+web/payload.json
+web/batch calls response.json
+web/new batch calls.json
+web/components.json
