--- a/web/.gitignore
+++ b/web/.gitignore
@@ -49,11 +49,14 @@ Thumbs.db
 # Documentation files (local development only)
 payload.json
 batch calls response.json
-web/CALLLOGS_SKELETON_IMPLEMENTATION.md
-web/CALLLOGS_VERIFIED.md
-web/IMPLEMENTATION_SUMMARY.md
-web/IMPLEMENTATION_COMPLETE.md
-web/OPTIMISTIC_NAVIGATION.md
-web/QUICKSTART_SKELETON_LOADING.md
-web/TROUBLESHOOTING.md
-web/VISUAL_GUIDE.md
+CALLLOGS_SKELETON_IMPLEMENTATION.md
+CALLLOGS_VERIFIED.md
+IMPLEMENTATION_SUMMARY.md
+IMPLEMENTATION_COMPLETE.md
+OPTIMISTIC_NAVIGATION.md
+QUICKSTART_SKELETON_LOADING.md
+TROUBLESHOOTING.md
+VISUAL_GUIDE.md
+components.json
+new batch calls.json
+batch calls response.json
