--- a/web/package.json
+++ b/web/package.json
@@ -52,6 +52,7 @@
     "file-saver": "^2.0.5",
     "framer-motion": "^12.23.24",
     "jose": "^6.1.2",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.545.0",
     "next": "^15.5.9",
     "prisma": "^6.19.0",
@@ -76,6 +77,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
