--- a/web/package.json
+++ b/web/package.json
@@ -22,7 +22,7 @@
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
-    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-radio-group": "^1.3.8",
     "@radix-ui/react-scroll-area": "^1.2.10",
@@ -36,6 +36,7 @@
     "@reduxjs/toolkit": "^2.10.0",
     "@stripe/react-stripe-js": "^5.4.0",
     "@stripe/stripe-js": "^8.5.2",
+    "@tabler/icons-react": "^3.36.1",
     "@tanstack/react-query": "^5.90.16",
     "@types/qrcode": "^1.5.6",
     "@xyflow/react": "^12.10.0",
@@ -50,10 +51,11 @@
     "date-fns": "^4.1.0",
     "exceljs": "^4.4.0",
     "file-saver": "^2.0.5",
-    "framer-motion": "^12.23.24",
+    "framer-motion": "^12.29.2",
     "jose": "^6.1.2",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.545.0",
+    "motion": "^12.29.2",
     "next": "^15.5.9",
     "prisma": "^6.19.0",
     "qrcode": "^1.5.4",
@@ -71,12 +73,12 @@
     "socket.io-client": "^4.8.1",
     "svix": "^1.81.0",
     "sweetalert2": "^11.26.2",
-    "tailwind-merge": "^3.3.1",
+    "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/postcss": "^4.1.18",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^19",
