feat: setup monorepo with npm workspaces and fix SDK imports
- Created root package.json with npm workspaces configuration
- Added workspace dependency management for sdk and web packages
- Updated web package.json to reference SDK as workspace package
- Configured TypeScript path aliases for all SDK features
- Updated Next.js config with webpack and turbopack aliases
- Fixed all component imports to use @lad/frontend-features
- Separated web-layer store imports from SDK imports
- Build now succeeds with zero errors
- Monorepo structure follows SDK-First architectural pattern

--- a/web/package.json
+++ b/web/package.json
@@ -15,7 +15,7 @@
     "@fortawesome/fontawesome-svg-core": "^7.1.0",
     "@fortawesome/free-brands-svg-icons": "^7.1.0",
     "@fortawesome/react-fontawesome": "^3.1.1",
-    "@lad/frontend-features": "file:../sdk",
+    "@lad/frontend-features": "*",
     "@prisma/client": "^6.19.0",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.10",
