--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -24,46 +24,19 @@
       }
     ],
     "paths": {
-      "@/*": [
-        "./src/*"
-      ],
-      "@/features/*": [
-        "./src/features/*",
-        "../sdk/features/*"
-      ],
-      "@sdk/campaigns": [
-        "../sdk/features/campaigns"
-      ],
-      "@sdk/campaigns/*": [
-        "../sdk/features/campaigns/*"
-      ],
-      "@sdk/features/campaigns": [
-        "../sdk/features/campaigns"
-      ],
-      "@sdk/features/campaigns/*": [
-        "../sdk/features/campaigns/*"
-      ],
-      "@sdk/dashboard": [
-        "../sdk/features/dashboard"
-      ],
-      "@sdk/features/dashboard": [
-        "../sdk/features/dashboard"
-      ],
-      "@sdk/overview": [
-        "../sdk/features/overview"
-      ],
-      "@sdk/features/overview": [
-        "../sdk/features/overview"
-      ],
-      "@sdk/overview": [
-        "../sdk/features/overview"
-      ],
-      "@sdk/features/overview": [
-        "../sdk/features/overview"
-      ],
-      "@sdk/*": [
-        "../sdk/*"
-      ]
+      "@/*": ["./src/*"],
+      "@lad/frontend-features": ["../sdk"],
+      "@lad/frontend-features/ai-icp-assistant": ["../sdk/features/ai-icp-assistant"],
+      "@lad/frontend-features/billing": ["../sdk/features/billing"],
+      "@lad/frontend-features/campaigns": ["../sdk/features/campaigns"],
+      "@lad/frontend-features/conversations": ["../sdk/features/conversations"],
+      "@lad/frontend-features/overview": ["../sdk/features/overview"],
+      "@lad/frontend-features/voice-agent": ["../sdk/features/voice-agent"],
+      "@lad/frontend-features/deals-pipeline": ["../sdk/features/deals-pipeline"],
+      "@lad/frontend-features/apollo-leads": ["../sdk/features/apollo-leads"],
+      "@lad/frontend-features/dashboard": ["../sdk/features/dashboard"],
+      "@lad/frontend-features/bookings": ["../sdk/features/bookings"],
+      "@lad/frontend-features/social-integration": ["../sdk/features/social-integration"]
     }
   },
   "include": [
@@ -72,7 +45,9 @@
     "**/*.tsx",
     ".next/types/**/*.ts",
     "src/app/phone-numbers/page.jsx",
-    ".next/dev/types/**/*.ts"
+    ".next/dev/types/**/*.ts",
+    "../sdk/**/*.ts",
+    "../sdk/**/*.tsx"
   ],
   "exclude": [
     "node_modules"
