fix: ensure tsconfig.json and next.config.mjs are included in Docker build
- Remove tsconfig.json from .dockerignore (needed for path aliases)
- Remove next.config.mjs from .dockerignore (required for Next.js build)
- Add comment in webpack config about React Query alias preventing duplicate instances

--- a/web/.dockerignore
+++ b/web/.dockerignore
@@ -42,8 +42,8 @@ docs/
 # Config files not needed in container
 .eslintrc.json
 .prettierrc
-tsconfig.json
-next.config.mjs
+# tsconfig.json     <-- KEEP THIS (needed for path aliases and type checking)
+# next.config.mjs   <-- KEEP THIS (required for Next.js build)
 
 # Test files
 **/*.test.ts
