--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -24,19 +24,45 @@
       }
     ],
     "paths": {
-      "@/*": ["./src/*"],
-      "@lad/frontend-features": ["../sdk"],
-      "@lad/frontend-features/ai-icp-assistant": ["../sdk/features/ai-icp-assistant"],
-      "@lad/frontend-features/billing": ["../sdk/features/billing"],
-      "@lad/frontend-features/campaigns": ["../sdk/features/campaigns"],
-      "@lad/frontend-features/conversations": ["../sdk/features/conversations"],
-      "@lad/frontend-features/overview": ["../sdk/features/overview"],
-      "@lad/frontend-features/voice-agent": ["../sdk/features/voice-agent"],
-      "@lad/frontend-features/deals-pipeline": ["../sdk/features/deals-pipeline"],
-      "@lad/frontend-features/apollo-leads": ["../sdk/features/apollo-leads"],
-      "@lad/frontend-features/dashboard": ["../sdk/features/dashboard"],
-      "@lad/frontend-features/bookings": ["../sdk/features/bookings"],
-      "@lad/frontend-features/social-integration": ["../sdk/features/social-integration"]
+      "@/*": [
+        "./src/*"
+      ],
+      "@lad/frontend-features": [
+        "../sdk"
+      ],
+      "@lad/frontend-features/ai-icp-assistant": [
+        "../sdk/features/ai-icp-assistant"
+      ],
+      "@lad/frontend-features/billing": [
+        "../sdk/features/billing"
+      ],
+      "@lad/frontend-features/campaigns": [
+        "../sdk/features/campaigns"
+      ],
+      "@lad/frontend-features/conversations": [
+        "../sdk/features/conversations"
+      ],
+      "@lad/frontend-features/overview": [
+        "../sdk/features/overview"
+      ],
+      "@lad/frontend-features/voice-agent": [
+        "../sdk/features/voice-agent"
+      ],
+      "@lad/frontend-features/deals-pipeline": [
+        "../sdk/features/deals-pipeline"
+      ],
+      "@lad/frontend-features/apollo-leads": [
+        "../sdk/features/apollo-leads"
+      ],
+      "@lad/frontend-features/dashboard": [
+        "../sdk/features/dashboard"
+      ],
+      "@lad/frontend-features/bookings": [
+        "../sdk/features/bookings"
+      ],
+      "@lad/frontend-features/social-integration": [
+        "../sdk/features/social-integration"
+      ]
     }
   },
   "include": [
@@ -47,7 +73,8 @@
     "src/app/phone-numbers/page.jsx",
     ".next/dev/types/**/*.ts",
     "../sdk/**/*.ts",
-    "../sdk/**/*.tsx"
+    "../sdk/**/*.tsx",
+    ".next/dev/dev/types/**/*.ts"
   ],
   "exclude": [
     "node_modules"
