--- a/web/cloudbuild-develop.yaml
+++ b/web/cloudbuild-develop.yaml
@@ -14,44 +14,46 @@ steps:
     args:
       - '-c'
       - |
-        echo "=== Build Arguments Debug ==="
+        echo "=== Develop Build Arguments Debug ==="
         echo "BRANCH_NAME: ${BRANCH_NAME}"
         echo "_API_URL: ${_API_URL}"
         echo "_NEXT_PUBLIC_SOCKET_URL: ${_NEXT_PUBLIC_SOCKET_URL}"
+        echo "Environment: DEVELOPMENT"
         echo "=== End Debug ==="
 
   # Build the Docker image with buildkit for better caching
   - name: 'gcr.io/cloud-builders/docker'
     args: [
       'build',
-      '-t', 'gcr.io/$PROJECT_ID/lad-frontend:$COMMIT_SHA',
-      '-t', 'gcr.io/$PROJECT_ID/lad-frontend:$SHORT_SHA',
-      '-t', 'gcr.io/$PROJECT_ID/lad-frontend:$BRANCH_NAME',
-      '-t', 'gcr.io/$PROJECT_ID/lad-frontend:latest',
-      '--cache-from', 'gcr.io/$PROJECT_ID/lad-frontend:latest',
+      '-t', 'gcr.io/$PROJECT_ID/lad-frontend-develop:$COMMIT_SHA',
+      '-t', 'gcr.io/$PROJECT_ID/lad-frontend-develop:$SHORT_SHA',
+      '-t', 'gcr.io/$PROJECT_ID/lad-frontend-develop:$BRANCH_NAME',
+      '-t', 'gcr.io/$PROJECT_ID/lad-frontend-develop:latest',
+      '--cache-from', 'gcr.io/$PROJECT_ID/lad-frontend-develop:latest',
       '--build-arg', 'BUILDKIT_INLINE_CACHE=1',
-      '--build-arg', 'NEXT_PUBLIC_BACKEND_URL=https://lad-backend-develop-741719885039.us-central1.run.app',
-      '--build-arg', 'NEXT_PUBLIC_ICP_BACKEND_URL=https://lad-backend-develop-741719885039.us-central1.run.app',
-      '--build-arg', 'NEXT_PUBLIC_SOCKET_URL=https://lad-backend-develop-741719885039.us-central1.run.app',
+      '--build-arg', 'NEXT_PUBLIC_BACKEND_URL=$_API_URL',
+      '--build-arg', 'NEXT_PUBLIC_ICP_BACKEND_URL=$_API_URL',
+      '--build-arg', 'NEXT_PUBLIC_SOCKET_URL=$_NEXT_PUBLIC_SOCKET_URL',
       '--build-arg', 'NEXT_PUBLIC_DISABLE_VAPI=false',
-      '-f', 'web/Dockerfile',
+      '--build-arg', 'NODE_ENV=development',
+      '-f', 'Dockerfile',
       '.'
     ]
 
   # Push the Docker images to Container Registry
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'gcr.io/$PROJECT_ID/lad-frontend:$COMMIT_SHA']
+    args: ['push', 'gcr.io/$PROJECT_ID/lad-frontend-develop:$COMMIT_SHA']
 
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'gcr.io/$PROJECT_ID/lad-frontend:$SHORT_SHA']
+    args: ['push', 'gcr.io/$PROJECT_ID/lad-frontend-develop:$SHORT_SHA']
 
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'gcr.io/$PROJECT_ID/lad-frontend:$BRANCH_NAME']
+    args: ['push', 'gcr.io/$PROJECT_ID/lad-frontend-develop:$BRANCH_NAME']
 
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'gcr.io/$PROJECT_ID/lad-frontend:latest']
+    args: ['push', 'gcr.io/$PROJECT_ID/lad-frontend-develop:latest']
 
-  # Deploy to Cloud Run
+  # Deploy to Cloud Run (Development)
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
     entrypoint: 'bash'
     args:
@@ -61,8 +63,8 @@ steps:
         
         # Create env-vars file with proper YAML format
         cat > /workspace/env-vars.yaml << 'EOF'
-        NODE_ENV: "production"
-        ENVIRONMENT: "production"
+        NODE_ENV: "development"
+        ENVIRONMENT: "development"
         BRANCH: "${BRANCH_NAME}"
         COMMIT_SHA: "${SHORT_SHA}"
         BUILD_ID: "${BUILD_ID}"
@@ -82,28 +84,28 @@ steps:
         echo "=== End File ==="
         
         gcloud run deploy $_SERVICE_NAME \
-          --image gcr.io/$PROJECT_ID/lad-frontend:$COMMIT_SHA \
+          --image gcr.io/$PROJECT_ID/lad-frontend-develop:$COMMIT_SHA \
           --region $_REGION \
           --platform managed \
           --allow-unauthenticated \
           --port 3000 \
-          --memory 2Gi \
-          --cpu 2 \
-          --min-instances 1 \
+          --memory 1Gi \
+          --cpu 1 \
+          --min-instances 0 \
           --max-instances 10 \
           --concurrency 80 \
           --timeout 300 \
           --env-vars-file /workspace/env-vars-final.yaml \
-          --update-labels environment=production,branch=$${BRANCH_LOWER},commit-sha=$SHORT_SHA,managed-by=cloud-build
+          --update-labels environment=development,branch=$${BRANCH_LOWER},commit-sha=$SHORT_SHA,managed-by=cloud-build
         
         echo "✅ Frontend deployment to $_SERVICE_NAME completed successfully"
 
 # Images to be pushed to Container Registry
 images:
-  - 'gcr.io/$PROJECT_ID/lad-frontend:$COMMIT_SHA'
-  - 'gcr.io/$PROJECT_ID/lad-frontend:$SHORT_SHA'
-  - 'gcr.io/$PROJECT_ID/lad-frontend:$BRANCH_NAME'
-  - 'gcr.io/$PROJECT_ID/lad-frontend:latest'
+  - 'gcr.io/$PROJECT_ID/lad-frontend-develop:$COMMIT_SHA'
+  - 'gcr.io/$PROJECT_ID/lad-frontend-develop:$SHORT_SHA'
+  - 'gcr.io/$PROJECT_ID/lad-frontend-develop:$BRANCH_NAME'
+  - 'gcr.io/$PROJECT_ID/lad-frontend-develop:latest'
 
 # Build options
 options:
@@ -114,10 +116,10 @@ options:
 # Timeout for the entire build
 timeout: '1800s'
 
-# Substitutions for Production Environment
+# Substitutions for Development Environment
 substitutions:
   _REGION: 'us-central1'
-  _SERVICE_NAME: 'lad-frontend-prod'
-  _ENV: 'production'
-  _API_URL: 'https://lad-backend-741719885039.us-central1.run.app'
-  _NEXT_PUBLIC_SOCKET_URL: 'https://lad-backend-741719885039.us-central1.run.app'
+  _SERVICE_NAME: 'lad-frontend-develop'
+  _ENV: 'development'
+  _API_URL: 'https://lad-backend-develop-741719885039.us-central1.run.app'
+  _NEXT_PUBLIC_SOCKET_URL: 'https://lad-backend-develop-741719885039.us-central1.run.app'
