--- a/web/package.json
+++ b/web/package.json
@@ -37,7 +37,8 @@
     "@stripe/react-stripe-js": "^5.4.0",
     "@stripe/stripe-js": "^8.5.2",
     "@tabler/icons-react": "^3.36.1",
-    "@tanstack/react-query": "^5.90.16",
+    "@tanstack/react-query": "^5.90.20",
+    "@tanstack/react-table": "^8.21.3",
     "@types/qrcode": "^1.5.6",
     "@xyflow/react": "^12.10.0",
     "ag-grid-community": "^34.3.1",
