--- a/sdk/package.json
+++ b/sdk/package.json
@@ -54,6 +54,7 @@
     "@types/react": "^18.0.0",
     "jsdom": "^27.3.0",
     "react": "^18.0.0",
+    "typescript": "^5.9.3",
     "vitest": "^4.0.16"
   },
   "peerDependencies": {
